--- a/src/style.css
+++ b/src/style.css
@@ -2,20 +2,21 @@
   margin:0;
   padding: 0;
   border: 0px;
+  font-family: Arial, sans-serif;
 }
 
 body{
-  /* background: url(img/mundo.png); */
-  /* background-repeat: no-repeat;
+  background: url(img/pantalla.jpg); 
+  background-repeat: no-repeat;
   background-position: center; 
   background-attachment: fixed;
-  background-size: cover; */
+  background-size: cover;
 
   background-color: rgb(216, 216, 219);
   margin: 0px;
   padding: 0px;
   width: 50%;
-  display: flex; /*COMENTAR*/
+  display: flex; /* COMENTAR */
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -24,17 +25,24 @@ body{
 }
 
 .fondog{
-  width: 50%;
+  background-size: cover;
+  width: 100%;
   height: 100%;
-  margin-top: 5%;
-  margin-left: 25%;
+  margin-top: 20%;
+  border-radius: 20px;
+  -webkit-box-shadow: 14px 13px 29px -6px rgba(0,0,0,0.75);
+  -moz-box-shadow: 14px 13px 29px -6px rgba(0,0,0,0.75);
+  box-shadow: 14px 13px 29px -6px rgba(0,0,0,0.75);
+  transition: all 1s;
 }
 
-@media only screen and (max-width: 1024px){
+@media only screen and (max-width: 764px){
   .fondog{
-    
-    width: 60%;
-    margin: 5% 0 5% 0;
+    background-size: cover;
+    width: 200px;
+    height: 200px;
+    margin-top: 10px;
+    margin-left: 200px;
   }
 }
 
@@ -56,10 +64,12 @@ body{
   box-shadow: 25px, 24px 24px -9px rgba(0, 0, 0, 0.75);
 }
 
-@media only screen and (max-width: 1024px){
+@media only screen and (max-width: 764px){
   .ventana{
       width: 60%;
       margin: 5% 0 5% 0;
+      margin-top: 180px;
+      margin-right: 800px;
   }
 }
 
@@ -76,6 +86,8 @@ body{
   padding: 10px;
   width: 100%;
   margin-top: 8px;
+  color: black;
+  
 }
 
 .caja-grupo{
@@ -174,8 +186,8 @@ input:focus{
 
 @media only screen and (max-width: 1024px){
   .logo{
-      width: 80%;
-      height: 150px;
+      width: 70%;
+      height: 250px;
       margin-top:  -75px;
   }
 }
@@ -190,9 +202,58 @@ input:focus{
 .opcion{
   text-align: center;
   margin-top: 10px;
+  color: black;
 }
 
 .registro{
   margin-top: 10px;
   text-align: center;
+  color: black;
+}
+
+.hide{
+  display: none;
+}
+
+/* Registro */
+
+#registrate{
+  position: absolute;
+  right: 280px;
+  top: 120px;
+  width: 280px;
+  height: 400px;
+  background: rgba(1, 107, 28, 0.418);
+  text-align: center;
+  border-radius: 10px;
+}
+
+#registrate input{
+  padding: 16px;
+  margin: 5px 0;
+  width: 176px;
+}
+
+
+
+.registroCorreo{
+  width: 209px;
+  height: 40px;
+  border-radius: 10px;
+  background: #065811;
+  border: 0;
+  color: white;
+  outline: none;
+  cursor: pointer;
+  margin-top: 10px;
+  
+}
+
+
+.letra{
+  font-family: 'Kaushan Script', cursive;
+  color: black;
+  text-align: center;
+  font-size: 50px;
+  margin-bottom: 20px;
 }
