--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,6 @@ body{
   justify-content: center;
   align-items: center;
   color: white;
-  font-family: 'Signika', sans-serif;
 }
 
 .fondog{
@@ -50,7 +49,7 @@ body{
   border-radius: 10px;
   padding: 17px;
   width: 400px;
-  height: 500px;
+  height: 580px;
   position: absolute;
   top: 50%;
   left: 70%;
@@ -62,11 +61,21 @@ body{
 
 @media only screen and (max-width: 1024px){
   .ventana{
-    width: 60%;
+    width: 75%;
     margin: 0% 0 0% 0;
     margin-right: 50px;
-    
+    margin-left: -80px; 
   }
+}
+
+.mensajeUno{
+  background: rgb(235, 184, 136);
+  width: 105%;
+  color: rgb(158, 48, 4);
+  font-size: 20px;
+  margin-top: 100px;
+  text-align: center;
+  margin-top: 50%;
 }
 
 .container{
@@ -81,7 +90,7 @@ body{
   flex-direction: column;
   padding: 10px;
   width: 100%;
-  margin-top: 8px;
+  margin-top: 2px;
   color: black;
   
 }
@@ -89,7 +98,7 @@ body{
 .caja-grupo{
   display: flex;
   width: 100%;
-  margin: 15px 0 15px 0;
+  margin: 5px 0 5px 0;
 }
 
 .caja-grupo > span{
@@ -156,16 +165,6 @@ input:focus{
   }
 }
 
-
-.mensaje{
-  background: rgb(235, 184, 136);
-  width: 105%;
-  color: rgb(158, 48, 4);
-  font-size: 20px;
-  margin-top: 100px;
-  text-align: center;
-}
-
 .hide{
   display: none;
 }
@@ -177,14 +176,14 @@ input:focus{
 .logo{
   position: absolute;
   height: 200px;
-  margin-top:  -40px;
+  margin-top: -2px;
 }
 
 @media only screen and (max-width: 1024px){
   .logo{
       width: 70%;
       height: 250px;
-      margin-top:  -75px;
+      margin-top: -40px;
   }
 }
 
@@ -254,11 +253,19 @@ input:focus{
   
 }
 
-
 .letra{
   font-family: 'Kaushan Script', cursive;
   color: black;
   text-align: center;
   font-size: 50px;
   margin-bottom: 20px;
+}
+
+.mensaje{
+  background: rgb(235, 184, 136);
+  width: 105%;
+  color: rgb(158, 48, 4);
+  font-size: 20px;
+  margin-top: 100px;
+  text-align: center;
 }
